# Verba

./: .gitignore  MANIFEST.in  Makefile  RAG_Dev.md  RAG_Dev_QuickRef.md  docker-compose.local-llm.yml  docker-compose.yml  pyproject.toml  setup-dev.sh  setup.py  test_mcp_server.py
docs/: ADDITIONAL_API_TRIGGER.md  CUSTOMIZATION.md  DEVELOPMENT.md  RAG_DEV.md
examples/: README.md  custom_chunker_example.py  custom_generator_example.py  custom_retriever_example.py
frontend/: next.config.js  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx  types.ts
frontend/app/components/Chat/: ChatInterface.tsx
frontend/app/components/Login/: LoginView.tsx
frontend/app/components/Navigation/: NavbarComponent.tsx
frontend/app/components/Settings/: SettingsComponent.tsx
goldenverba/: .env.example  default_sources.example.yaml  verba_manager.py
goldenverba/components/: interfaces.py  managers.py
goldenverba/components/embedding/: LMStudioEmbedder.py
goldenverba/components/generation/: LMStudioGenerator.py
goldenverba/components/reader/: GitReader.py
goldenverba/components/retriever/: WindowRetriever.py
goldenverba/server/: api.py
goldenverba/server/frontend/: .gitignore
mcp_rag_server/: DEPLOYMENT.md  INTEGRATION.md  README.md  __init__.py  cli.py  config.example.json  config.json  config.py  memory_manager.py  server.py  tools.py
mcp_rag_server/examples/: basic_usage.py
mcp_rag_server/tests/: IMPLEMENTATION.md  README.md  __init__.py  run_tests.py  test_e2e_file_operations.py  test_langchain_integration.py  test_memory_manager.py  test_requirements.txt
mcp_rag_server/tests/test_resources/: sample_code.py
scripts/: debug_local.sh  run_local.sh  validate_default_sources.py
