[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "goldenverba"
version = "2.1.3"
description = "Welcome to Verba: The Golden RAGtriever, an open-source initiative designed to offer a streamlined, user-friendly interface for Retrieval-Augmented Generation (RAG) applications. In just a few easy steps, dive into your data and make meaningful interactions!"
authors = [
    { name = "Weaviate", email = "edward@weaviate.io" }
]
readme = "README.md"
license = { text = "BSD License" }
requires-python = ">=3.10.0,<3.13.0"
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["rag", "retrieval", "weaviate", "ai", "llm", "vector-database"]

dependencies = [
    "weaviate-client==4.9.6",
    "python-dotenv==1.0.0",
    "openpyxl==3.1.5",
    "wasabi==1.1.2",
    "fastapi==0.111.1",
    "uvicorn[standard]==0.29.0",
    "gunicorn==22.0.0",
    "click==8.1.7",
    "xlrd==2.0.2",
    "asyncio==3.4.3",
    "tiktoken==0.6.0",
    "requests==2.31.0",
    "pypdf==4.3.1",
    "python-docx==1.1.2",
    "scikit-learn==1.5.1",
    "langchain-text-splitters==0.2.2",
    "spacy==3.7.5",
    "aiohttp==3.9.5",
    "markdownify==0.13.1",
    "aiofiles==24.1.0",
    "assemblyai==0.33.0",
    "beautifulsoup4==4.12.3",
    "langdetect==1.0.9",
    "pandas>=2.3.2",
    "pyyaml>=6.0",
    "mcp>=1.12.4",
    "mem0ai>=0.1.115",
    "pymilvus>=2.4.9",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "wheel", 
    "twine",
    "black>=23.7.0",
    "setuptools",
]
google = [
    "vertexai==1.46.0",
]
huggingface = [
    "sentence-transformers==3.0.1",
]

[project.urls]
Homepage = "https://github.com/weaviate/Verba"
Repository = "https://github.com/weaviate/Verba"
Documentation = "https://github.com/weaviate/Verba"
"Bug Reports" = "https://github.com/weaviate/Verba/issues"

[project.scripts]
verba = "goldenverba.server.cli:cli"

[tool.setuptools.packages.find]
include = ["goldenverba*"]

[tool.setuptools]
include-package-data = true

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "black>=23.7.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501", "F401", "F841"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
